adjusted image picker display size and fixed the image display so that they aren't as stretched out

--- a/app/static/css/imagepicker.css
+++ b/app/static/css/imagepicker.css
@@ -50,10 +50,10 @@
 	margin: 0 auto;
 	left: 0;
 	right: 0;
-	top:30px;
-	bottom: 30px;
+	top:60px;
+	bottom: 60px;
 	z-index: 11;
-	width: 80%;
+	width: 50%;
 }
 
 .modal-body{
